# amsstudio

./: .gitignore  Makefile  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
docs/: itil-query-test-catalog.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
tests/: conftest.py  test_agentic.py  test_api.py  test_features.py  test_graph_catalog.py  test_insights.py  test_pipeline.py  test_prd_metrics.py  test_preprocessing.py  test_query_engine.py  test_workspace.py
ticket_analytics/: __init__.py  agentic.py  api_server.py  constants.py  features.py  graph_catalog.py  insights.py  pipeline.py  prd_metrics.py  preprocessing.py  query_engine.py  visualization.py  workspace.py
ticket_analytics_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
