[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-analytics-platform"
version = "0.1.0"
description = "ITIL ticket analytics platform with derived insights, query interface, and unified charting."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "plotly>=5.20",
  "streamlit>=1.34",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["ticket_analytics"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --disable-warnings --cov=ticket_analytics --cov-report=term-missing"
testpaths = ["tests"]
