[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-analytics-platform"
version = "0.1.0"
description = "ITIL ticket analytics platform with derived insights, query interface, and unified charting."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "plotly>=5.20",
  "kaleido>=0.2.1",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1",
  "xlrd>=2.0",
  "openai>=1.54",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["ticket_analytics"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --disable-warnings --cov=ticket_analytics --cov-report=term-missing"
testpaths = ["tests"]
